feat : 카드색상변경 버튼 추가

--- a/3-bolierplate/src/style.css
+++ b/3-bolierplate/src/style.css
@@ -6,3 +6,33 @@ body {
 * {
   box-sizing: border-box;
 }
+
+button {
+  border: none;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  overflow: visible;
+  background: transparent;
+  color: inherit;
+  font: inherit;
+  line-height: normal;
+  -webkit-font-smoothing: inherit;
+  -moz-osx-font-smoothing: inherit;
+  -webkit-appearance: none;
+}
+
+.container {
+  position: absolute;
+  bottom: 64px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 16px;
+  gap: 16px;
+}
+.container button {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
